2018-02-26  Tulio Magno Quites Machado Filho  <tuliom@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/sys/ptrace.h: Undefine Linux
	macros used in __ptrace_request.

2018-02-21  Mike FABIAN  <mfabian@redhat.com>

	[BZ #22517]
	* localedata/locales/et_EE (LC_COLLATE): add missing “reorder-end”

2018-02-21  Rical Jasan  <ricaljasan@pacific.net>

	* io/fcntl.h: Fix a typo in a comment.

2018-02-20  Rical Jasan  <ricaljasan@pacific.net>

	* manual/creature.texi (_ISOC99_SOURCE): Update the dated
	description.

	[BZ #16335]
	* manual/creature.texi (_POSIX_C_SOURCE): Document special values
	of 199606L, 200112L, and 200809L.
	(_XOPEN_SOURCE): Document special values of 600 and 700.
	(_ISOC11_SOURCE): Document macro.
	(_ATFILE_SOURCE): Likewise.
	(_FORTIFY_SOURCE): Likewise.

2018-03-09  Aurelien Jarno  <aurelien@aurel32.net>

	[BZ #22919]
	* sysdeps/unix/sysv/linux/sparc/sparc32/setcontext.S (__startcontext):
	Add nop before __startcontext, add explaining comments.

2018-03-07  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #22926]
	* sysdeps/powerpc/powerpc32/sysdep.h (ABORT_TRANSACTION_IMPL): Define
	empty for __SPE__.
	* sysdeps/powerpc/sysdep.h (ABORT_TRANSACTION): Likewise.
	* sysdeps/unix/sysv/linux/powerpc/elision-lock.c (__lll_lock_elision):
	Do not build hardware transactional code for __SPE__.
	* sysdeps/unix/sysv/linux/powerpc/elision-trylock.c
	(__lll_trylock_elision): Likewise.
	* sysdeps/unix/sysv/linux/powerpc/elision-unlock.c
	(__lll_unlock_elision): Likewise.

2018-02-19  Rical Jasan  <ricaljasan@pacific.net>

	[BZ #6889]
	* manual/filesys.texi (get_current_dir_name): Clarify behaviour.

2018-02-16  Rical Jasan  <ricaljasan@pacific.net>

	* manual/platform.texi (__riscv_flush_icache): Fix @deftypefun
	syntax.

2018-02-09  Rical Jasan  <ricaljasan@pacific.net>

	* manual/creature.texi: Convert references to gcc.info to gcc.
	* manual/stdio.texi: Likewise.
	* manual/string.texi: Likewise.
